<resources>
    <string name="app_name">Product Comparison</string>
    <string name="main_fragment_label">Select product</string>
    <string name="select_model_fragment_label">Select models</string>
    <string name="compare_fragment_label">Product comparison</string>
    <string name="air_conditioner">Air conditioner</string>
    <string name="built_in_oven">Oven</string>
    <string name="dishwasher">Dishwasher</string>
    <string name="freezer">Freezer</string>
    <string name="kitchen_hood">Kitchen hood</string>
    <string name="microwave">Microwave</string>
    <string name="mini_oven">Mini oven</string>
    <string name="monitor">Monitor</string>
    <string name="range">Kitchen Range</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="small_household_appliance">Tefal</string>
    <string name="tv">Televisor</string>
    <string name="vacuum_cleaner">Vacuum cleaner</string>
    <string name="washing_machine">Washing machine</string>
    <string name="main_menu_fragment_title">Product catalog</string>
    <string name="calculator_fragment_title">Product calculator</string>
    <string name="model_text">Model</string>
    <string name="model_name">Name</string>
    <string name="characteristics">Characteristics</string>
    <string name="stated">Stated</string>
    <string name="actually">Actually</string>
    <string-array name="tv_data">
        <item>Diagonal size</item>
        <item>OS type</item>
        <item>OS version</item>
        <item>Screen resolution</item>
        <item>Voice control</item>
        <item>Remote control voice control</item>
        <item>RAM</item>
        <item>Flash memory</item>
        <item>Energy consumption</item>
    </string-array>
    <string-array name="about_names">
        <item>No data</item>
        <item>Not specified</item>
        <item>Does not work</item>
        <item>There is</item>
        <item>No</item>
    </string-array>
    <string name="energy_consumption">Energy consumption</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="unit_energy_kw">kW/h</string>
    <string name="currency">soum</string>
</resources>