<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.cyberpantera.productcomparison.fragments.compare.CompareViewModel" />
        <variable
            name="adapter"
            type="com.cyberpantera.productcomparison.adapters.CompareProductAdapter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragments.compare.CompareFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.35714285714285714285714285714286"
                android:text="@string/characteristics"
                style="@style/compare_param.name" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:showIn="@layout/fragment_compare">

                    <TextView
                        android:layout_weight="1"
                        android:text="@{viewModel.getModelsName()[0]}"
                        style="@style/compare_param.header_name"/>

                    <TextView
                        android:layout_weight="1"
                        android:text="@{viewModel.getModelsName()[1]}"
                        style="@style/compare_param.header_name"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:showIn="@layout/fragment_compare">

                    <TextView
                        android:text="@string/stated"
                        style="@style/compare_param.header_name"/>

                    <TextView
                        android:text="@string/actually"
                        style="@style/compare_param.header_name"/>

                    <TextView
                        android:text="@string/stated"
                        style="@style/compare_param.header_name"/>

                    <TextView
                        android:text="@string/actually"
                        style="@style/compare_param.header_name"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adapter="@{adapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/compare_param_item" />

    </LinearLayout>

</layout>